# coala-bears

./: .coafile  .moban.yaml  .travis.yml  DESCRIPTION  Fudgefile  Gemfile  Godeps.json  JuliaProject.toml  META.yml  Makefile.PL  Project.toml  REQUIRE  bear-languages.yaml  bear-metadata.yaml  bear-requirements.txt  bear-requirements.yaml  build.gradle  circle.yml  coala-bears.cabal  coala.cabal  opam  package.json  requirements.txt  setup.cfg  setup.py  shrinkwrap.yaml  test-requirements.txt  test.hs  tox.ini
.ci/: AppVeyor.ps1  AppVeyorPSLint.ps1  FudgeAppVeyor.ps1  FudgeCI.ps1  FudgeGenerateFake.ps1  FudgePostInstall.ps1  Fudgefile.appveyor  Fudgefile.travis  Fudgefile.travis.uninstall  PSLint.ps1  PSScriptAnalyzerSettings.psd1  PrepareAVVM.ps1  appveyor.yml  bears.dirs.prune.sh  bears.prune.sh  check_unsupported.sh  constants.ps1  deps.ActivePerl-packages.ps1  deps.ActivePerl.ps1  deps.StrawberryPerl.ps1  deps.adoptopenjdk-packages.ps1  deps.adoptopenjdk.ps1  deps.alex.sh  deps.apt.sh  deps.apt_get.sh  deps.cabal.sh  deps.coala-bears.sh  deps.composer-packages.ps1  deps.dartsdk.sh  deps.elm-platform-packages.ps1  deps.elm.sh  deps.flawfinder.sh  deps.gem.sh  deps.generic.sh  deps.ghc-mod.sh  deps.ghc-packages.ps1  deps.go.sh  deps.golang-packages.ps1  deps.golang.ps1  deps.goreturns.sh  (+51 more)
.circleci/: config.yml
.moban.dt/: bear-requirements.txt.jj2  bears-conftest.py.jj2  bears-setup.cfg.jj2  bears-test-requirements.txt.jj2  bears-travis.yml.jj2  package.json.jj2  requirements.txt.jj2  travis-before-install.yaml  travis-manual-matrix.yaml  travis-manual-matrix.yml
(+48 files in other folders)
