Name: coala-bears
Version: 0.10
cabal-version: >= 1.2
build-type: Simple

-- another useless comment
-- safe 0.3.9 is needed to co-insist with Cabal 1.16
-- safe 0.3.10 requires Cabal 1.18

-- regex-base-0.93.2 (reinstall) changes: mtl-2.1.2 -> 2.2.1
-- cabal: The following packages are likely to be broken by the reinstalls:
-- regex-posix-0.95.2
-- regex-compat-0.95.1

-- current solution: add mtl

library
  build-depends: base, Cabal>=1.16, safe==0.3.9, mtl==2.2.1, ghc-mod==5.6.0.0, hlint==1.9.27, ShellCheck==0.4.1
